change to phd thesis the journal name

--- a/content/publication/baggio-2011-PhDThesis/cite.bib
+++ b/content/publication/baggio-2011-PhDThesis/cite.bib
@@ -2,7 +2,7 @@
  abstract = {The past decade has seen an increase in interdisciplinary science and in the analysis of Social-Ecological Systems (SES). The study of the complex interactions between humans and nature is central to the understanding of our planet's state and to plan for the future. This thesis develops a systemic approach that uses network theoretical tools to analyze structural properties, agent based models to simulate dynamics of a system, and a resilience framework to analyze, conceptualize and discuss the results given by the theoretical models. A combination of models and techniques drawn from different disciplines is synthesised in order to develop a uniform set of tools which is effective for a structural analysis of SES. The first step in this research integrates network and resilience theory, and builds a theoretical model that analyzes how landscapes' structural properties affect the dynamics of a simple predator-prey system. The second step builds upon the first and introduces a “managing institution” that is able to alter the landscapes' structural properties according to pre-determined rules. It analyzes how human intervention influences the landscape network of a given system and how these properties influence the predator-prey system under study. The third step in this work constructs a model that analyzes management communities' interactions. The model aims to uncover the relationship between authority and management path homogenization, which influences the ability of the social system to proactively build resilience. Methods, techniques used, and the models presented in this thesis can prove extremely useful as a first assessment of a SES resilience. They potentially assist policymakers to make more informed decisions based on a combination of empirical experience and computer assisted reasoning. Moreover, this research contributes towards a theoretical understanding of the complex evolutionary mechanisms that govern a SES. II},
  author = {Baggio, Jacopo A.},
  file = {:Users/jacapobaggio/Documents/A_STUDI/AAA_ALL_Papers//Baggio - 2011 - Analyzing Social-Ecological Systems Linking Resilience, Network theory, and Agent Based Modelling.pdf:pdf},
- journal = {Networks},
+ journal = {PhD Thesis},
  number = {May},
  title = {Analyzing Social-Ecological Systems: Linking Resilience, Network theory, and Agent Based Modelling},
  year = {2011}
