retry again, granted up to here, all folder, projects  and papers OK

--- a/content/publication/Baggio-2021-KnowledgeClimChangeML/cite.bib
+++ b/content/publication/Baggio-2021-KnowledgeClimChangeML/cite.bib
@@ -8,7 +8,7 @@ keywords = {climate change,network analysis,science evolution,topic modelling},
 month = {jul},
 number = {1-2},
 pages = {13},
-title = {{Knowledge generation via social-knowledge network co-evolution: 30 years (1990–2019) of adaptation, mitigation and transformation related to climate change}},
+title = {Knowledge generation via social-knowledge network co-evolution: 30 years (1990–2019) of adaptation, mitigation and transformation related to climate change},
 url = {https://link.springer.com/10.1007/s10584-021-03146-5},
 volume = {167},
 year = {2021}
