change to latest pub

--- a/content/publication/Schoon-2021-Collab4Cases/cite.bib
+++ b/content/publication/Schoon-2021-Collab4Cases/cite.bib
@@ -1,13 +1,12 @@
 @article{Schoon2021,
 author = {Schoon, Michael and Chapman, Mollie and Loos, Jacqueline and Speranza, Chinwe Ifejika and Kelman, Candice Carr and Aburto, Jaime and Alexander, Steve and Baggio, Jacopo and Cockburn, Jessica and Cundill, Georgina and Lopez, Gustavo Garcia and Robinson, Catherine and Thondhlana, Gladman and Trimble, Micaela and Schoon, Michael and Chapman, Mollie and Loos, Jacqueline and Speranza, Chinwe Ifejika and Kelman, Candice Carr and Aburto, Jaime and Alexander, Steve and Baggio, Jacopo and Brady, Ute and Cundill, Georgina and Lopez, Gustavo Garcia and Hill, Rosemary and Robinson, Catherine},
 doi = {10.1080/26395916.2021.1946593},
-file = {:Users/jacapobaggio/Documents/A{\_}STUDI/AAA{\_}ALL{\_}Papers/Schoon et al. - 2021 - On the frontiers of collaboration and conflict how context influences the success of collaboration.pdf:pdf},
 journal = {Ecosystems and People},
 number = {1},
 pages = {383--399},
 publisher = {Taylor {\&} Francis},
 title = {{On the frontiers of collaboration and conflict : how context influences the success of collaboration}},
-url = {https://doi.org/10.1080/26395916.2021.1946593},
+url = {https://www.tandfonline.com/doi/abs/10.1080/26395916.2021.1946593},
 volume = {17},
 year = {2021}
 }
