Updating Pubs - part 1

--- a/content/untitled folder/Koutzoukis-2023-GolidlocksForbsCheatGrass/cite.bib
+++ b/content/untitled folder/Koutzoukis-2023-GolidlocksForbsCheatGrass/cite.bib
@@ -1,17 +1,13 @@
-@article{Baggio2015a,
- abstract = {Many recent studies observe the increasing importance, influence, and analysis of resilience as a concept to understand the capacity of a system or individual to respond to change. The term has achieved prominence in diverse scientific fields, as well as public discourse and policy arenas. As a result, resilience has been referred to as a boundary object or a bridging concept that is able to facilitate communication and understanding across disciplines, coordinate groups of actors or stakeholders, and build consensus around particular policy issues. We present a network analysis of bibliometric data to understand the extent to which resilience can be considered as a boundary object or a bridging concept in terms of its links across disciplines and scientific fields. We analyzed 994 papers and 35,952 citations between them to reveal the connectedness and links between and within fields. We analyzed the network according to different fields, modules, and sub-fields, showing a highly clustered citation network. Analyzing betweenness allowed us to identify how particular papers bridge across fields and how different fields are linked. With the exception of a few specific papers, most papers cite exclusively within their own field. We conclude that resilience is to an extent a boundary object because there are shared understandings across diverse disciplines and fields. However, it is more limited as a bridging concept because the citations across fields are concentrated among particular disciplines and papers, so the distinct fields do not widely or routinely refer to each other. There are some signs of resilience being used as an interdisciplinary concept to bridge scientific fields, particularly in social- ecological systems, which may itself constitute an emerging sub-field.},
- author = {Baggio, Jacopo A. and Brown, Katrina and Hellebrandt, Denis},
- doi = {10.5751/ES-07484-200202},
- file = {:Users/jacapobaggio/Documents/A_STUDI/AAA_ALL_Papers/Baggio, Brown, Hellebrandt - 2015 - Boundary object or bridging concept A citation network analysis of resilience.pdf:pdf},
- issn = {1708-3087},
- journal = {Ecology and Society},
- keywords = {Bibliometric analysis,Boundary object,Bridging,Citation,Interdisciplinarity,Network,Resilience,resilience},
- mendeley-tags = {resilience},
- number = {2},
- pages = {2},
- title = {Boundary object or bridging concept? A citation network analysis of resilience},
- url = {/citations?view_op=view_citation&continue=/scholar%253Fhl%253Den%2526as_sdt%253D0,45%2526scilib%253D1&citilm=1&citation_for_view=JVoOErgAAAAJ:WAzi4Gm8nLoC&hl=en&oi=p http://www.ecologyandsociety.org/vol20/iss2/art2/},
- volume = {20},
- year = {2015}
+@article{koutzoukis2023restoration,
+   author = {Koutzoukis, Sofia and Pyke, David A. and Brunson, Mark W. and Baggio, Jacopo and Calzado‐Martinez, Carmen and Veblen, Kari E.},
+   title = {Goldilocks forbs: survival is highest outside—but not too far outside—of Wyoming big sagebrush canopies},
+   journal = {Restoration Ecology},
+   volume = {31},
+   number = {6},
+   abstract = {In arid and semiarid systems, positive effects of nurse shrubs generally occur immediately underneath and around shrub canopies, creating microsites that can be targeted to promote plant establishment in restoration settings. Alternatively, the best microsites may occur in the interspace zone immediately surrounding nurse shrubs if positive abiotic effects extend beyond nurse shrub canopy boundaries and if competition with nurse shrubs is reduced in that zone. In the Intermountain West, U.S.A., we investigated survival of transplanted herbaceous seedlings at different distances from Wyoming big sagebrush (Artemisia tridentata ssp. wyomingensis) canopies. We planted two native perennial forb species, Munro’s globemallow (Sphaer- alcea munroana) and common yarrow (Achillea millefolium), and two native perennial grass species, bluebunch wheatgrass (Pseudoroegneria spicata) and bottlebrush squirreltail (Elymus elymoides), at four distances from sagebrush canopies at six sites across the Intermountain West, repeated across 2 years. Under above-normal precipitation, proximity to sagebrush influenced first-year survival of the forb, but not grass, species. Globemallow and yarrow survival were highest mid-way between the can- opy dripline and maximum interspace distance between neighboring sagebrush plants. Ground cover characteristics and glo- bemallow survival covaried with respect to distance from shrub, suggesting ground cover characteristics as indicators of suitable planting microsites. Under drier conditions, survival of all species was low and unaffected by distance from canopies. Our results demonstrate the value of fine-tuning the canopy-interspace paradigm to more carefully consider how plant perfor- mance may differ across zones within the interspace region between plants, especially when the goal is to maximize plant estab- lishment in nondrought years.},
+   ISSN = {1061-2971
+1526-100X},
+   DOI = {10.1111/rec.13919},
+   year = {2023},
+   type = {Journal Article}
 }
-
